add master branch only to approve-to-deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,10 @@ workflows:
           requires:
             - test
       - approve-to-deploy:
+          filters:
+            branches:
+              only:
+                - master
           type: approval
           requires:
             - push
