--- a/k8s.yaml
+++ b/k8s.yaml
@@ -42,6 +42,12 @@ spec:
                 secretKeyRef:
                   name: auth-envs
                   key: AUTH_TOKEN_ISSUER
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 3
+            periodSeconds: 3
 ---
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
