--- a/k8s.yaml
+++ b/k8s.yaml
@@ -9,9 +9,9 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: 50%
+      maxSurge: 1
       maxUnavailable: 0
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: auth
@@ -46,8 +46,8 @@ spec:
             httpGet:
               path: /
               port: 80
-            initialDelaySeconds: 3
-            periodSeconds: 3
+            initialDelaySeconds: 5
+            periodSeconds: 5
 ---
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
@@ -60,7 +60,7 @@ spec:
     kind: Deployment
     name: auth
     apiVersion: apps/v1beta1
-  minReplicas: 3
+  minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
 ---
