Add gcloud --quiet option

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,10 +53,10 @@ jobs:
           name: Setup Google Cloud SDK
           command: |
             echo ${GCLOUD_AUTH} > ${HOME}/gcp-key.json
-            gcloud auth activate-service-account --key-file ${HOME}/gcp-key.json
+            gcloud --quiet auth activate-service-account --key-file ${HOME}/gcp-key.json
             gcloud --quiet config set project ${GCP_PROJECT}
-            gcloud auth configure-docker
-            gcloud container clusters get-credentials taeho-cluster --zone us-west1-a --project ${GCP_PROJECT}
+            gcloud --quiet auth configure-docker
+            gcloud --quiet container clusters get-credentials taeho-cluster --zone us-west1-a --project ${GCP_PROJECT}
       - run:
           name: Install dependencies
           command: apt-get -y install gettext-base
