Split gRPC server and HTTP server

--- a/k8s.yaml
+++ b/k8s.yaml
@@ -25,6 +25,7 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 80
+            - containerPort: 81
           env:
             - name: AUTH_SIGNING_METHOD
               valueFrom:
@@ -79,6 +80,8 @@ spec:
   ports:
     - port: 80
       name: grpc
+    - port: 81
+      name: http
   selector:
     app: auth
 
@@ -94,6 +97,14 @@ spec:
   gateways:
     - public-gateway
   http:
+    - match:
+        - uri:
+            prefix: /jwks
+      route:
+        - destination:
+            host: auth
+            port:
+              number: 81
     - route:
         - destination:
             host: auth
