--- a/k8s.yaml
+++ b/k8s.yaml
@@ -95,7 +95,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: auth
+  name: auth-route-public-no-auth
 spec:
   hosts:
     - auth.taeho.io
