--- a/k8s.yaml
+++ b/k8s.yaml
@@ -98,7 +98,7 @@ metadata:
   name: auth-route-public-no-auth
 spec:
   hosts:
-    - auth.taeho.io
+    - api.taeho.io
   gateways:
     - public-gateway
   http:
