--- a/k8s.yaml
+++ b/k8s.yaml
@@ -87,7 +87,7 @@ spec:
     - port: 80
       name: grpc
     - port: 81
-      name: grpc
+      name: grpc-jwt
     - port: 82
       name: http
   selector:
@@ -98,7 +98,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: auth-route-public-auth
+  name: auth-route-public-grpc-no-auth
 spec:
   hosts:
     - api.taeho.io
@@ -110,16 +110,16 @@ spec:
             prefix: /auth.Auth/Refresh
       route:
         - destination:
-            host: note
+            host: auth
             port:
-              number: 81
+              number: 80
 
 ---
 
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: auth-route-public-no-auth
+  name: auth-route-public-http-no-auth
 spec:
   hosts:
     - api.taeho.io
